--- a/src/application/add_employe_dashbord.fxml
+++ b/src/application/add_employe_dashbord.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.add_employer_controller">
+<BorderPane fx:id="emp_container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.add_employer_controller">
    <top>
       <GridPane prefHeight="200.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -29,7 +29,8 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Pane prefHeight="200.0" prefWidth="200.0">
                <children>
                   <Text fill="#a1a1a1" layoutX="14.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Admin &gt;">
                      <font>
@@ -43,9 +44,9 @@
                   </Text>
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
-                  <Button layoutX="372.0" layoutY="16.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="80.0" styleClass="btn_add" stylesheets="@add_employe_style.css" text="Ajouter">
+                  <Button fx:id="add_emp" layoutX="372.0" layoutY="16.0" mnemonicParsing="false" onAction="#add_emp_conatiner" prefHeight="35.0" prefWidth="80.0" styleClass="btn_add" stylesheets="@add_employe_style.css" text="Ajouter">
                      <effect>
                         <DropShadow>
                            <color>
@@ -57,7 +58,7 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button layoutX="269.0" layoutY="16.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="80.0" styleClass="btn_mod" stylesheets="@add_employe_style.css" text="Modifier">
+                  <Button fx:id="mod_emp" layoutX="269.0" layoutY="16.0" mnemonicParsing="false" onAction="#mod_emp_conatiner" prefHeight="35.0" prefWidth="80.0" styleClass="btn_mod" stylesheets="@add_employe_style.css" text="Modifier">
                      <effect>
                         <DropShadow>
                            <color>
@@ -77,20 +78,20 @@
    <bottom>
       <HBox alignment="CENTER" prefHeight="400.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <ScrollPane prefHeight="262.0" prefWidth="800.0" styleClass="scroll-bar" stylesheets="@scrollbar_style.css">
+            <ScrollPane prefHeight="262.0" prefWidth="900.0" styleClass="scroll-bar" stylesheets="@scrollbar_style.css">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="800.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="900.0">
                      <children>
-                        <TableView fx:id="table" prefHeight="400.0" prefWidth="800.0" style="-fx-background-color: white;">
+                        <TableView fx:id="table" prefHeight="400.0" prefWidth="900.0" style="-fx-background-color: white;">
                           <columns>
-                            <TableColumn fx:id="id" prefWidth="45.600007593631744" style="-fx-background-color: white;" text="Id" />
-                            <TableColumn fx:id="username" prefWidth="126.39996337890625" style="-fx-background-color: white;" text="nom d'utilisateur" />
-                              <TableColumn fx:id="nom" prefWidth="116.80001831054688" style="-fx-background-color: white;" text="Nom" />
-                              <TableColumn fx:id="prenom" prefWidth="101.5999755859375" style="-fx-background-color: white;" text="Prenom" />
-                              <TableColumn fx:id="nuermo" prefWidth="74.39999389648438" style="-fx-background-color: white;" text="Numero" />
-                              <TableColumn fx:id="address" minWidth="0.0" prefWidth="140.0" style="-fx-background-color: white;" text="Address" />
-                              <TableColumn fx:id="email" minWidth="0.0" prefWidth="103.20001220703125" style="-fx-background-color: white;" text="Email" />
-                              <TableColumn fx:id="role" minWidth="0.0" prefWidth="81.5999755859375" style="-fx-background-color: white;" text="Role" />
+                            <TableColumn fx:id="id" prefWidth="62.39999204874039" style="-fx-background-color: white;" text="Id" />
+                            <TableColumn fx:id="username" prefWidth="163.1999855041504" style="-fx-background-color: white;" text="nom d'utilisateur" />
+                              <TableColumn fx:id="nom" prefWidth="114.4000244140625" style="-fx-background-color: white;" text="Nom" />
+                              <TableColumn fx:id="prenom" prefWidth="88.79998779296875" style="-fx-background-color: white;" text="Prenom" />
+                              <TableColumn fx:id="nuermo" prefWidth="71.99996948242188" style="-fx-background-color: white;" text="Numero" />
+                              <TableColumn fx:id="address" minWidth="0.0" prefWidth="108.0" style="-fx-background-color: white;" text="Address" />
+                              <TableColumn fx:id="email" minWidth="0.0" prefWidth="149.5999755859375" style="-fx-background-color: white;" text="Email" />
+                              <TableColumn fx:id="role" minWidth="0.0" prefWidth="90.4000244140625" style="-fx-background-color: white;" text="Role" />
                           </columns>
                         </TableView>
                      </children>
