--- a/bin/application/parts_dashbord.fxml
+++ b/bin/application/parts_dashbord.fxml
@@ -17,23 +17,20 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.DashbordController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.parts_dashbord_controller">
    <bottom>
       <HBox alignment="CENTER" prefHeight="390.0" prefWidth="930.0" BorderPane.alignment="CENTER">
          <children>
-            <ScrollPane prefHeight="390.0" prefWidth="800.0">
+            <ScrollPane prefHeight="390.0" prefWidth="900.0">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="390.0" prefWidth="800.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="390.0" prefWidth="900.0">
                      <children>
-                        <TableView prefHeight="390.0" prefWidth="800.0">
+                        <TableView prefHeight="390.0" prefWidth="900.0">
                           <columns>
-                            <TableColumn prefWidth="95.20001369714737" text="C1" />
-                            <TableColumn prefWidth="55.20001220703125" text="C2" />
-                              <TableColumn prefWidth="75.0" text="C2" />
-                              <TableColumn prefWidth="75.0" text="C2" />
-                              <TableColumn prefWidth="75.0" text="C2" />
-                              <TableColumn prefWidth="75.0" text="C2" />
-                              <TableColumn prefWidth="75.0" text="C2" />
+                            <TableColumn fx:id="nom_col" prefWidth="142.0" text="Nom" />
+                            <TableColumn fx:id="desc_col" prefWidth="219.0" text="Description" />
+                              <TableColumn fx:id="quntite_col" prefWidth="88.0" text="Quntite" />
+                              <TableColumn fx:id="prix_col" prefWidth="75.0" text="Prix" />
                           </columns>
                         </TableView>
                      </children>
@@ -44,7 +41,7 @@
       </HBox>
    </bottom>
    <top>
-      <GridPane prefHeight="180.0" prefWidth="930.0" BorderPane.alignment="CENTER">
+      <GridPane prefHeight="200.0" prefWidth="930.0" BorderPane.alignment="CENTER">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -76,7 +73,7 @@
                         <Font size="25.0" />
                      </font>
                   </Text>
-                  <Text layoutX="133.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Parts">
+                  <Text layoutX="117.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Parts">
                      <font>
                         <Font name="System Bold" size="25.0" />
                      </font>
@@ -85,7 +82,7 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <TextField layoutX="70.0" layoutY="15.0" prefHeight="30.0" prefWidth="150.0" promptText="Recherche" />
+                  <TextField fx:id="reserch_field" layoutX="14.0" layoutY="15.0" prefHeight="30.0" prefWidth="206.0" promptText="Recherche" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
@@ -132,7 +129,7 @@
                         </DropShadow>
                      </effect>
                   </Button>
-                  <Button fx:id="add_btn1" layoutX="14.0" layoutY="15.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" styleClass="btn_mod" stylesheets="@part_style.css" text="Modifier">
+                  <Button fx:id="mod_btn" layoutX="14.0" layoutY="15.0" mnemonicParsing="false" onAction="#mod_parts" prefHeight="30.0" prefWidth="100.0" styleClass="btn_mod" stylesheets="@part_style.css" text="Modifier">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
