--- a/src/application/Rendez_vous_dashbord.fxml
+++ b/src/application/Rendez_vous_dashbord.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Rendez_vous_dashbord_controller">
+<BorderPane fx:id="rendez_container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Rendez_vous_dashbord_controller">
    <top>
-      <GridPane prefHeight="150.0" prefWidth="930.0" BorderPane.alignment="CENTER">
+      <GridPane prefHeight="96.0" prefWidth="930.0" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -21,6 +21,6 @@
       </GridPane>
    </top>
    <center>
-      <Pane prefHeight="516.0" prefWidth="930.0" BorderPane.alignment="CENTER" />
+      <Pane prefHeight="172.0" prefWidth="930.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
