--- a/src/application/parts_dashbord.fxml
+++ b/src/application/parts_dashbord.fxml
@@ -28,7 +28,7 @@
                         <TableView fx:id="parts_table" prefHeight="390.0" prefWidth="900.0">
                           <columns>
                             <TableColumn fx:id="nom_col" prefWidth="142.0" text="Nom" />
-                            <TableColumn fx:id="desc_col" prefWidth="219.0" text="Description" />
+                            <TableColumn fx:id="parts_table" prefWidth="219.0" text="Description" />
                               <TableColumn fx:id="quntite_col" prefWidth="88.0" text="Quntite" />
                               <TableColumn fx:id="prix_col" prefWidth="75.0" text="Prix" />
                           </columns>
