--- a/bin/application/parts_dashbord.fxml
+++ b/bin/application/parts_dashbord.fxml
@@ -25,7 +25,7 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="390.0" prefWidth="900.0">
                      <children>
-                        <TableView prefHeight="390.0" prefWidth="900.0">
+                        <TableView fx:id="parts_table" prefHeight="390.0" prefWidth="900.0">
                           <columns>
                             <TableColumn fx:id="nom_col" prefWidth="142.0" text="Nom" />
                             <TableColumn fx:id="desc_col" prefWidth="219.0" text="Description" />
